2006-07-02  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixSymbolicLinkInfo.cs: Oops.  CreateSymbolicLinkTo() should create
	  FullPath, not OriginalName.  This was fixed in one overload in January,
	  but I missed an overload. :-/

2006-07-02  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixPath.cs: Follow .NET's System.IO.Path.Combine() behavior, and "reset"
	  the generated path if any argument beings with a path root --
	  UnixPath.Combine("/a", "/b") should return "/b", not "/a/b".  Fixes #78580.

2006-04-21  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixFileSystemInfo.cs: rename Create() to GetFileSystemEntry(), and make
	  it public (so that other's don't need to worry about the
	  Syscall.lstat()-and-switch to create a UnixFileSystemInfo instance).
	* UnixDirectoryInfo.cs, UnixSymbolicLinkInfo.cs:
	  s/Create/GetFileSystemEntry/g (to cope with above change).

2006-03-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* UnixEndPoint.cs: added GetHashCode/Equals.

2006-03-06  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixDriveInfo.cs: Remove requirement that mountPoints be avaible via
	  getfsfile(3).  This isn't always the case -- in particular drives mounted
	  via HAL and other mechanisms won't be listed in /etc/fstab, and thus won't
	  be returned via getfsfile(3).  If getfsfile(3) fails, then we "guess" on
	  the drive format and volume label.
	* UnixStream.cs: RefreshStat() should assert that the instance hasn't been
	  disposed.
	* UnixEnvironment.cs (GetConfigurationValue, GetConfigurationString): Fix
	  error checking.

2006-02-23  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixFileSystemInfo.cs: Create() should return a UnixFileInfo if the file
	  doesn't exist.  This allows callers to use UnixFileInfo.Exists to see if
	  the file exists, and behaves more rationally e.g. if the directory
	  contents changes while calling UnixDirectoryInfo.GetFileSystemEntries(),
	  we'll get a UnixFileInfo entry that doesn't exist instead of an exception